# webserver

./: LICENSE  Procfile  README.md  requirements.txt  run.py  setup.cfg  webserver.py
docs/: methodology.md
docs/examples/esp32/: README.md  TERATERM.INI
docs/examples/esp32/src/: boot.py  main.py
tests/: conftest.py  test_models.py  webserver_test.db
tests/functional/: test_recipes.py
tests/resources/: test_devicedata.py  test_userlogin.py
webserver/: __init__.py  app.py  config.py  forms.py  models.py
webserver/common/: utils.py
webserver/resources/: __init__.py  device_data.py  user_login.py
webserver/templates/: 404.html  500.html  base.html
webserver/templates/about/: index.html  members.html  projectinfo.html
webserver/templates/devices/: graph.html  index.html  monitor.html
webserver/templates/home/: home.html
webserver/templates/users/: device_register.html  login.html  register.html
webserver/views/: about.py  devices.py  error_handler.py  home.py  users.py
