[metadata]
name = webserver
version = 1.0.0
url = https://github.com/jamestansx/webserver/
license = MIT-License
maintainer = James Tan 
maintainer_email = jamestansx@gmail.com
description = A simple webserver for Computer Engineering Assignment
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir=
    =webserver
packages = find:
include_package_data = true
install_requires =
    Flask
    Flask-Bootstrap
    Flask-JWT-Extended
    Flask-Login
    Flask-RESTful
    Flask-SQLAlchemy
    Flask-WTF

[options.packages.find]
where=webserver

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    webserver
